Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Admin message
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
Graphical glitches in Firefox with kernel 6.2-rc1 [RX580]
After updating to kernel 6.2-rc1 in Fedora Rawhide, there are occasional graphics errors in the upper half of the display when browsing with Firefox. These relatively light glitches often resemble a checkerboard pattern and do not always occur. The system does not freeze or report any errors, it stays perfectly usable, even games work fine.
When downgrading to kernel 6.1.0 the glitches disappear completely, and they can easily be reproduced by just booting the rc1 kernel again.
Have just bisected, on openSUSE Tumbleweed, X, Firefox. Radeon RX580.
the log:
git bisect start# status: waiting for both good and bad commits# bad: [1b929c02afd37871d5afb9d498426f83432e71c2] Linux 6.2-rc1git bisect bad 1b929c02afd37871d5afb9d498426f83432e71c2# status: waiting for good commit(s), bad commit known# good: [830b3c68c1fb1e9176028d02ef86f3cf76aa2476] Linux 6.1git bisect good 830b3c68c1fb1e9176028d02ef86f3cf76aa2476# bad: [fc4c9f450493daef1c996c9d4b3c647ec3121509] Merge tag 'efi-next-for-v6.2' of git://git.kernel.org/pub/scm/linux/kernel/git/efi/efigit bisect bad fc4c9f450493daef1c996c9d4b3c647ec3121509# good: [8ecd28b7a3a4c43a875a8840851f72468a2ca1d7] Merge tag 'ata-6.2-rc1' of git://git.kernel.org/pub/scm/linux/kernel/git/dlemoal/libatagit bisect good 8ecd28b7a3a4c43a875a8840851f72468a2ca1d7# bad: [66efff515a6500d4b4976fbab3bee8b92a1137fb] Merge tag 'amd-drm-next-6.2-2022-12-07' of https://gitlab.freedesktop.org/agd5f/linux into drm-nextgit bisect bad 66efff515a6500d4b4976fbab3bee8b92a1137fb# good: [49e8e6343df688d68b12c2af50791ca37520f0b7] Merge tag 'amd-drm-next-6.2-2022-11-04' of https://gitlab.freedesktop.org/agd5f/linux into drm-nextgit bisect good 49e8e6343df688d68b12c2af50791ca37520f0b7# bad: [fc58764bbf602b65a6f63c53e5fd6feae76c510c] Merge tag 'amd-drm-next-6.2-2022-11-18' of https://gitlab.freedesktop.org/agd5f/linux into drm-nextgit bisect bad fc58764bbf602b65a6f63c53e5fd6feae76c510c# bad: [4e291f2f585313efa5200cce655e17c94906e50a] Merge tag 'drm-misc-next-2022-11-10-1' of git://anongit.freedesktop.org/drm/drm-misc into drm-nextgit bisect bad 4e291f2f585313efa5200cce655e17c94906e50a# good: [78a43c7e3b2ff5aed1809f93b4f87a418355789e] drm/nouveau/gr/gf100-: make global attrib_cb actually globalgit bisect good 78a43c7e3b2ff5aed1809f93b4f87a418355789e# bad: [611fc22c9e5e13276c819a7f7a7d19b794bbed1a] drm/arm/hdlcd: remove calls to drm_mode_config_cleanup()git bisect bad 611fc22c9e5e13276c819a7f7a7d19b794bbed1a# bad: [a8d9621b9fc67957b3de334cc1b5f47570fb90a0] drm/ingenic: Don't set struct drm_driver.output_poll_changedgit bisect bad a8d9621b9fc67957b3de334cc1b5f47570fb90a0# bad: [2cf9886e281678ae9ee57e24a656749071d543bb] drm/scheduler: remove drm_sched_dependency_optimizedgit bisect bad 2cf9886e281678ae9ee57e24a656749071d543bb# skip: [940ca22b7ea9db6857ba7c6adb961b84d8cc28ff] drm/amdgpu: drop amdgpu_sync from amdgpu_vmid_grab v2 - some different kind of corruption and even Firefox/X getting "stuck"git bisect skip 940ca22b7ea9db6857ba7c6adb961b84d8cc28ff# bad: [aab9cf7b6954136f4339136a1a7fc0602a2c4d8b] drm/amdgpu: use scheduler dependencies for VM updatesgit bisect bad aab9cf7b6954136f4339136a1a7fc0602a2c4d8b# good: [4f91790b42ffba72d80434d901548979ab41dc7c] drm/amdgpu: use drm_sched_job_add_resv_dependencies for moves - similar corruption like the skipped commit, but no lockup, and not this specific corruptiongit bisect good 4f91790b42ffba72d80434d901548979ab41dc7c# good: [f7d66fb2ea43a3016e78a700a2ca6c77a74579f9] drm/amdgpu: cleanup scheduler job initialization v2git bisect good f7d66fb2ea43a3016e78a700a2ca6c77a74579f9
last step produced the culprit:
1b2d5eda5ad7 ("drm/amdgpu: move explicit sync check into the CS")
Built that as well and confirmed it's bad. So despite some issues towards the end of the bisect, the last good seemed fine, and the first bad commit directly follows that in git log. Will also try revert on top rc2 if possible.
I tried a revert of commit 1b2d5eda5ad7 on top of the openSUSE 6.2-rc2 kernel (I can see the glitches with Radeon WX2100 since 6.2 merge window snapshots). It seems to behave better, e.g. the issue with "konsole" windows blinking between previous and current content seems to be gone and the glitches seem to only appear in specific firefox windows. But I can still see the zigzag patterns in some firefox windows; e.g. https://www.astro.cz/ seems to be quite reliable reproducer, especially when the cursor moves on top of that window.
Edit: after some time, the "konsole" windows blinking is back as well.
I investigated the issue some more. First I tried a bisect and ended up with the same commit as Vlastimil. Then I retried revert of commit 1b2d5eda5ad7 on top of clean mainline v6.2-rc1 and it still did show the glitches. So I tried another bisect, this time between 1b2d5eda5ad7 and v6.2-rc1 with a revert of 1b2d5eda5ad7 in each step. This bisect resulted in commit 1728baa7e4e6 ("drm/amdgpu: use scheduler dependencies for CS") as first bad.
1728baa7e4e6 ("drm/amdgpu: use scheduler dependencies for CS")
1b2d5eda5ad7 ("drm/amdgpu: move explicit sync check into the CS")
and the glitches are gone. So apparently either of 1b2d5eda5ad7 and 1728baa7e4e6 causes the problem. (Commits aab9cf7b6954 and 46e0270c71d3 might deserve a check too.)
Yes, this one looks good so far (on top of current mainline). I've been running with it only for a few minutes but I already tried tests that triggered the issue in any "bad" kernel before.
Nice, thanks a lot guys. Just one more test. I want to see if I it's sufficient if I reduce this to the explicit sync or if we somehow have a dependency for the implicit syncs as well.
Nice, thanks a lot guys. Just one more test. I want to see if I it's sufficient if I reduce this to the explicit sync or if we somehow have a dependency for the implicit syncs as well.