- drm/amdgpu: fix pipeline sync v2   (https://gitlab.freedesktop.org/drm/amd/-/issues/2323). - Delete   patches.suse/Revert-drm-amdgpu-move-explicit-sync-check-into-the-.patch. - Delete   patches.suse/Revert-drm-amdgpu-use-scheduler-dependencies-for-CS.patch. - Delete   patches.suse/Revert-drm-scheduler-remove-drm_sched_dependency_opt.patch.

Replace reverts of offending commits by queued upstream fix.

suse-commit: 90ac6726af799e1302aab78a044d1f51516fefb5